Expand options and add documentation for automatic visualization.
- Adds `autovisualize=...` keyword arguments to `treescope.show` and
  `treescope.display` to allow customizing automatic visualization for a single
  output.
- Refactors `trescope.display` to support root-repr customization and better
  match the default pretty-printer configuration.
- Adds `%%autovisualize True` and `%%autovisualize False` as more explicit
  automatic visualization settings for the cell magic.
- Documents the behavior of `%%autovisualize` in more detail.

PiperOrigin-RevId: 660135433

--- a/docs/notebooks/pretty_printing.ipynb
+++ b/docs/notebooks/pretty_printing.ipynb
@@ -592,7 +592,7 @@
    },
    "outputs": [],
    "source": [
-    "%%autovisualize None\n",
+    "%%autovisualize False\n",
     "# ^ to turn it off\n",
     "treescope.display(some_arrays['array_1'])"
    ]
