Update documentation of NN rendering, tweak Sequential formatting
- Update docs configuration to depend on Penzai 0.2
- Add examples of neural network and named array visualization
- Fix badly-formatted background for torch.nn.Sequential

PiperOrigin-RevId: 660153215

--- a/docs/_include/_glue_figures.ipynb
+++ b/docs/_include/_glue_figures.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "import IPython.utils.capture\n",
         "\n",
-        "from penzai.experimental.v2 import pz"
+        "from penzai import pz"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "from penzai.experimental.v2.models.transformer.variants import llamalike_common\n",
+        "from penzai.models.transformer.variants import llamalike_common\n",
         "\n",
         "model = llamalike_common.build_llamalike_transformer(\n",
         "    llamalike_common.LlamalikeTransformerConfig(\n",
@@ -124,6 +124,36 @@
       "source": [
         "myst_nb.glue(\n",
         "    \"treescope_after\",\n",
+        "    IPython.display.HTML(\n",
+        "        \"\".join(output.data['text/html'] for output in capturer.outputs)\n",
+        "    ),\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "S5sxOy_btLN4"
+      },
+      "outputs": [],
+      "source": [
+        "with IPython.utils.capture.capture_output() as capturer:\n",
+        "  with treescope.active_autovisualizer.set_scoped(treescope.ArrayAutovisualizer()):\n",
+        "    with treescope.using_expansion_strategy(max_height=30):\n",
+        "      treescope.display(model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aHeftFUAtE2s"
+      },
+      "outputs": [],
+      "source": [
+        "myst_nb.glue(\n",
+        "    \"treescope_penzai\",\n",
         "    IPython.display.HTML(\n",
         "        \"\".join(output.data['text/html'] for output in capturer.outputs)\n",
         "    ),\n",
