--- a/docs/notebooks/array_visualization.ipynb
+++ b/docs/notebooks/array_visualization.ipynb
@@ -344,7 +344,32 @@
     "id": "C_gVKOztoji8"
    },
    "source": [
-    "Treescope can also visualize Penzai's `NamedArray`, and takes labels from them. This means that, if your code is written with `NamedArrays`, you get labeled visualizations for free! This applies both to axes that have been tagged with a name and axes that haven't. (See the [NamedArray tutorial](https://penzai.readthedocs.io/en/stable/notebooks/named_axes.html) for more information on how `NamedArray`s work in penzai.)"
+    "Treescope can also visualize Penzai's `NamedArray`, and takes labels from them. This means that, if your code is written with `NamedArrays`, you get labeled visualizations for free!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5XwzlmmWzWu1"
+   },
+   "outputs": [],
+   "source": [
+    "from penzai import pz\n",
+    "my_named_array = pz.nx.wrap(\n",
+    "    jax.random.normal(jax.random.key(1), (10, 4, 16)),\n",
+    ").tag(\"query_seq\", \"heads\", \"embed\")\n",
+    "\n",
+    "treescope.render_array(my_named_array, columns=[\"embed\", \"heads\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ea1MMEHuzXJr"
+   },
+   "source": [
+    "(See the [NamedArray tutorial](https://penzai.readthedocs.io/en/stable/notebooks/named_axes.html) for more information on how `NamedArray`s work in penzai.)"
    ]
   },
   {
