--- a/docs/notebooks/pretty_printing.ipynb
+++ b/docs/notebooks/pretty_printing.ipynb
@@ -952,8 +952,8 @@
     "id": "PPBrX2URqClt"
    },
    "source": [
-    "### Multidimensional Arrays\n",
-    "Treescope supports showing a variety of arrays and tensors, including Numpy, JAX, and PyTorch arrays. It shows them by summarizing the shape, mean, standard deviation, bounds, and number of special values, and will also visualize their contents automatically."
+    "### Multidimensional arrays / tensors\n",
+    "Treescope supports showing a variety of arrays and tensors, including Numpy, JAX, and PyTorch arrays. It shows them by summarizing the shape, mean, standard deviation, bounds, and number of special values, and will also visualize their contents automatically (if automatic visualization is enabled)."
    ]
   },
   {
@@ -974,10 +974,104 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "6OJSNgHPxlLq"
+   },
+   "source": [
+    "Treescope also supports arrays with named axes. For example, when visualizing a Penzai `NamedArray`, axis names are automatically shown:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Rn-eqDXgxyO6"
+   },
+   "outputs": [],
+   "source": [
+    "from penzai import pz\n",
+    "pz.nx.wrap(\n",
+    "    jax.random.normal(jax.random.key(1), (10, 4, 16)),\n",
+    ").tag(\"query_seq\", \"heads\", \"embed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "_5NhWnCSiEJ6"
    },
    "source": [
     "When used in IPython, Treescope will try to render the tree structure first and then insert array visualizations later. This can make visualization faster and can sometimes let you see the shape of JAX arrays before JAX has finished computing their values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "cV3fl0czt1wu"
+   },
+   "source": [
+    "### Neural network models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Ga0gmbMEt9L8"
+   },
+   "source": [
+    "Treescope can render a variety of neural network models.\n",
+    "\n",
+    "In the [Penzai](https://penzai.readthedocs.io/en/stable/) and [Equinox](https://docs.kidger.site/equinox/) neural network libraries, model objects are represented as Python dataclasses. In this case, Treescope will render the dataclass attributes, similar to the ordinary `repr` for a dataclass. For instance, here's a simple Penzai model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "PL4PIgEpu0PI"
+   },
+   "outputs": [],
+   "source": [
+    "from penzai.models import simple_mlp\n",
+    "simple_mlp.MLP.from_config(\n",
+    "    name=\"mlp\",\n",
+    "    init_base_rng=jax.random.key(0),\n",
+    "    feature_sizes=[8, 32, 32, 8]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "44Ki34VDu5hp"
+   },
+   "source": [
+    "In [PyTorch](https://pytorch.org/docs/stable/nn.html), models are represented as dynamic Python objects which can have arbitrary attributes. Treescope will inspect the model object and visualize its non-private configuration attributes, submodules, and parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "uwoVWyjHvt4O"
+   },
+   "outputs": [],
+   "source": [
+    "torch.nn.Sequential(\n",
+    "    torch.nn.Linear(8, 32),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(32, 32),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(32, 8),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "VYMKasiEwF_I"
+   },
+   "source": [
+    "Custom classes can also use Treescope's extension API to modify their renderings. For instance, [Flax's NNX modules](https://flax.readthedocs.io/en/latest/nnx/index.html) support the extension API and can also be used with Treescope."
    ]
   },
   {
